# CodigoPrimerParcialEstructura

./: CMakeLists.txt  README.md  main.c
AlgoritmosOrdenamiento/: QuickSort.c  QuickSort.h  SelectionSort.c  SelectionSort.h
Dispersion/: DispersionAbierta.c  DispersionAbierta.h  DispersionCerrada.c  DispersionCerrada.h
TDA/: Arbol.c  Arbol.h  Cola.c  Cola.h  Diccionario.c  Diccionario.h  ListaDoblementeEnlazada.c  ListaDoblementeEnlazada.h  ListaOrdenada.c  ListaOrdenada.h  Nodo.h  Pila.c  Pila.h
